Prevent header navigation from appearing below other z-indexed components

--- a/content/Assets/Styles/components/header/_default.scss
+++ b/content/Assets/Styles/components/header/_default.scss
@@ -2,7 +2,14 @@
    #HEADER/DEFAULT
    ========================================================================== */
 
+/**
+ * 1. Prevents navigation submenus from appearing below any other z-indexed
+ *    components.
+ */
 .header {
+    position: relative; /* 1. */
+    z-index: $z-index-front; /* 1. */
+    
     &__content {
         @include content-gutter();
         align-items: center;
